# POO2-Buffy

./: Action.cpp  Action.h  CMakeLists.txt  Field.cpp  Field.h  README.md  main.cpp
Action/: Action.cpp  Action.h  Kill.cpp  Kill.h  Utils.h
Action/Moving/: Hunt.cpp  Hunt.h  Move.cpp  Move.h  RunFrom.cpp  RunFrom.h  Sleep.cpp  Sleep.h  Wander.cpp  Wander.h
Humanoids/: Humanoid.cpp  Humanoid.h  Hunter.cpp  Hunter.h
Humanoids/Hunter/: Hunter.cpp  Hunter.h
Humanoids/Hunter/Monster/: Vampire.cpp  Vampire.h
Humanoids/Hunter/Slayer/: Buffy.cpp  Buffy.h
Humanoids/Monster/: Vampire.cpp  Vampire.h
Humanoids/Slayer/: Buffy.cpp  Buffy.h  Faith.cpp  Faith.h
Humanoids/Victim/: Lambda.cpp  Lambda.h  LambdaHuman.cpp  LambdaHuman.h  Person.cpp  Person.h
